almost finisihing the module 2

--- a/module-1/lectures.ipynb
+++ b/module-1/lectures.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "122f890b",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "client = OpenAI(\n",
+    "openai_client = OpenAI(\n",
     "  api_key=OPENAI_API_KEY\n",
     ")\n",
     "\n",
